# AICamp-I4

./: README.md
Example01/: README.md  exercise_notebook-pdf_form (1).ipynb  exercise_notebook-pdf_form.ipynb  exercise_notebook-regular_pdf (1).ipynb  exercise_notebook-regular_pdf.ipynb  pyproject.toml  streamlit_app.py  streamlit_demo.py
Example01/core/: main_form.py  main_unstructured_text.py
Example01/data/results/: uploaded_form_metadata.csv  uploaded_form_tabulardata.csv  uploaded_text_sections.csv
Example02/: README.md  assets.py  exercise_notebook.ipynb  functions.py  pipeline.py  pyproject.toml  yolo_models_demo.ipynb
Example02/data/results/: tracks_20250919-161602.csv
Example03/: README.md  assets.py  exercise_notebook.ipynb  functions.py  pipeline.py  pyproject.toml  streamlit_app.py
Example03/data/summaries_demo/: scene_1_summary.txt  scene_2_summary.txt  scene_3_summary.txt  scene_4_summary.txt  scene_5_summary.txt  scene_6_summary.txt  scene_7_summary.txt
Example03/data/transcripts_demo/: scene_1.txt  scene_2.txt  scene_3.txt  scene_4.txt  scene_5.txt  scene_6.txt  scene_7.txt
