[project]
name = "example02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.11.6",
    "dagster-webserver>=1.11.6",
    "deep-sort-realtime>=1.3.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pip>=25.2",
    "pyqt6>=6.9.1",
    "torchinfo>=1.8.0",
    "ultralytics>=8.3.183",
]
